--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "@google/genai": "^1.30.0",
+    "mammoth": "^1.4.21",
     "pdfjs-dist": "^2.16.105",
-    "mammoth": "^1.4.21"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "vite": "^5.0.0"
