--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5",
     "pdfkit": "^0.17.2"
   }
 }
