Change pdf extract to OCR

--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "express": "^5.1.0",
     "multer": "^2.0.2",
     "pdf-parse": "^2.4.5",
-    "pdfkit": "^0.17.2"
+    "pdfjs-dist": "^5.4.394",
+    "pdfkit": "^0.17.2",
+    "tesseract.js": "^4.1.4"
   }
 }
